Apply Google fonts

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,8 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
 @import '~@angular/material/prebuilt-themes/indigo-pink.css';
+@import url('https://fonts.googleapis.com/css?family=Zilla+Slab');
 
 body {
   margin: 0;
+  font-family: 'Zilla Slab', serif;
 }
 
 .fill-remaining-space {
