Change theming and fonts

--- a/src/app/top-nav/top-nav.component.html
+++ b/src/app/top-nav/top-nav.component.html
@@ -1,4 +1,4 @@
-<md-toolbar color="primary" id="top-nav">
+<md-toolbar color="accent" id="top-nav">
   <span>Ivan Filipchyk</span>
   <!-- This fills the remaining space of the current row -->
   <span class="fill-remaining-space"></span>
