--- a/src/app/top-nav/top-nav.component.scss
+++ b/src/app/top-nav/top-nav.component.scss
@@ -1,7 +1,7 @@
 #top-nav {
   text-transform: uppercase;
-  font-family: 'Zilla Slab', serif;
+  font-family: 'Lato', sans-serif;
   .mat-button {
-    font-family: 'Zilla Slab', serif;
+    font-family: 'Lato', sans-serif;
   }
 }
