--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,37 @@
-<div id="app" class="mat-app-background">
-  <app-top-nav></app-top-nav>
-  <div id="main">
-    <h2>
-      While we are working on filling my website with more information, you can watch one of my videos below.
-      Thanks for patience!
-    </h2>
-    <iframe width="800" height="454" [src]="sanitizer.bypassSecurityTrustResourceUrl(videoToDisplay)" frameborder="0"
-            allowfullscreen></iframe>
+<md-sidenav-container>
+  <md-sidenav #sidenav id="sidenav">
+    <md-list>
+      <md-list-item>
+        <a md-button>
+          <span>Paintings</span>
+        </a>
+      </md-list-item>
+      <md-list-item>
+        <a md-button>
+          <span>Videos</span>
+        </a>
+      </md-list-item>
+      <md-list-item>
+        <a md-button>
+          <span>Events</span>
+        </a>
+      </md-list-item>
+    </md-list>
+  </md-sidenav>
+
+  <div id="app">
+    <button type="button" md-button (click)="sidenav.open()">
+      Open sidenav
+    </button>
+    <app-top-nav [sidenav]=sidenav></app-top-nav>
+    <div id="main">
+      <h2>
+        While we are working on filling my website with more information, you can watch one of my videos below.
+        Thanks for patience!
+      </h2>
+      <iframe width="800" height="454" [src]="sanitizer.bypassSecurityTrustResourceUrl(videoToDisplay)" frameborder="0"
+              allowfullscreen></iframe>
+    </div>
   </div>
-</div>
+
+</md-sidenav-container>
