--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -24,7 +24,7 @@
     <div id="main">
       <h2 [ngClass.gt-sm]="{ lg: true }">
         While we are working on filling my website with more information, you can watch one of my videos below.
-        Thanks for patience!
+        Thanks for your patience!
       </h2>
       <iframe class="video"
               [src]="sanitizer.bypassSecurityTrustResourceUrl(videoToDisplay)"
